# DupuitLEM

./: .gitignore  DupuitLEMTest.py  DupuitLEMTestMSFConvergence.py  DupuitLEMTest_bash.sh  Ksat_2_analysis.py  MSF_convergence.sh  MSF_convergence_analysis.py  README.md  Rtot_analysis.py  dd_analysis.py  id.txt  pyproject.toml  run_storms_1.py  run_storms_1.sh  run_storms_2.py  run_storms_2.sh  run_storms_3.py  run_storms_3.sh  run_storms_4.py  run_storms_4.sh  run_storms_5.py  run_storms_5.sh  run_storms_test1.py  run_storms_test1.sh  setup.py  slurm-37158622_3.out  slurm-37158986_0.out  slurm-37158986_2.out  slurm-37158986_3.out  slurm-37158986_4.out  slurm-37205951_2.out  slurm-37205951_3.out  slurm-37205951_4.out  slurm-37223770_0.out  slurm-37223770_1.out  slurm-37223770_2.out  slurm-37223840_0.out  slurm-37223840_1.out  slurm-37223840_2.out  slurm-37223855_1.out  (+124 more)
DupuitLEM/: __init__.py  io.py
DupuitLEMKsat_2_out/: slurm-38200998_13.out
DupuitLEMStorms_1_out/: slurm-38201229_2.out
old_scripts/: DupuitLEMTest.py  MSF_convergence.sh  standard_lem.py  steady_analysis.sh  vary_Ksat_MSF.py  vary_Ksat_depth_dep.py  vary_Ksat_depth_dep.sh  vary_Ksat_flat_base.sh  vary_bc.py  vary_bc.sh  vary_duration_analysis.py  vary_duration_analysis.sh  vary_k_d_intermittent_analysis.py  vary_k_d_steady_analysis.py
out_files/: slurm-38200997_0.out  slurm-38200997_13.out  slurm-38200997_2.out  slurm-38200997_3.out  slurm-38200997_5.out  slurm-38200997_7.out  slurm-38200998_1.out  slurm-38201229_4.out  slurm-38201229_5.out  slurm-38358680_10.out  slurm-38358680_11.out  (+119 more)
(+646 files in other folders)
