[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DupuitLEM"
version = "0.1"
description = "Groundwater landscape evolution with landlab"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "David Litwin", email = "david.litwin@temple.edu" }
]
urls = { "Homepage" = "https://github.com/DavidLitwin/DupuitLEM/" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "numpy",
  "pandas",
  "landlab",
  "tqdm",
  "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["DupuitLEM*"]
